[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "weather"
version = "0.0.1"
authors = [
  { name="Ghoul072", email="ahm3d.yaseen@gmail.com" },
]
description = "Python API for weather and geolocation. Powered by www.weatherapi.com"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ghoul072/weather"
"Bug Tracker" = "https://github.com/Ghoul072/weather/issues"